# JMsg

./: .gitignore  CMakeLists.txt  JMsg.sln  JMsg.vcproj  README.md  jmsg_test.lua
abseil-cpp/: asbl.vcxproj
example/: Makefile  example.vcproj  example.vcxproj  example.vcxproj.filters  generate.bat  main.cpp  userInfo.cpp  userInfo.go  userInfo.h  userInfo.txt  userInfoDeclare.h
generator/: Des.cpp  Des.h  Makefile  base64.h  jmsg_code_writer.cpp  jmsg_code_writer.h  jmsg_generator.cpp  jmsg_generator.vcproj  jmsg_generator.vcxproj
jsoncpp/: jsoncpp.vcproj
jsoncpp/include/json/: config.h
lua/: jmsg_generator.cpp
lua_lib/: ljmsg.cpp  ljmsg.h
output/: AddressInfo.cpp  AddressInfo.h  UserInfo.cpp  UserInfo.h
src/: Makefile  jmsg.h  jmsg.vcproj  jmsg.vcxproj  jmsg.vcxproj.filters  jmsg_config.h  jmsg_encodeable.h  jmsg_field.h  jmsg_idl_parse.cpp  jmsg_idl_parse.h  jmsg_proto.cpp  jmsg_proto.h  jmsg_reader.cpp  jmsg_reader.h  jmsg_type.cpp  jmsg_type.h  jmsg_util.cpp  jmsg_util.h  jmsg_writer.cpp  jmsg_writer.h
test/: Makefile  config1.txt  main.cpp
